k8s-OPA-gatekeeper/test-malicious-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: malicious-pod
spec:
  containers:
  - name: nginx
    image: nginx:latest
    securityContext:
      runAsNonRoot: false  # VIOLATION!
