k8s-OPA-gatekeeper/no-root-containers-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sNoRootContainers
metadata:
  name: no-root-containers
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    scope: Namespaced
  parameters:
    exemptions: []
