k8s-OPA-gatekeeper/privileged-containers-always-non-root.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8snonrootcontainer
spec:
  crd:
    spec:
      names:
        kind: K8sNonRootContainer
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8snonrootcontainer

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          container.securityContext.runAsNonRoot != true
          msg := sprintf("Container must run as non-root: %v", [container.name])
        }
